@@ -34,7 +34,6 @@
 
 #include <X11/Xarch.h>
 #include "xf86.h"
-#include "xf86_ansic.h"
 #include "xf86_OSproc.h"
 #include "xaa.h"
 #include "xf86PciInfo.h"
